[gd_scene load_steps=28 format=2]

[ext_resource path="res://tileset/tilemap_grassy_lands.tres" type="TileSet" id=1]
[ext_resource path="res://entities/entity_mc/entity_mc.tscn" type="PackedScene" id=2]
[ext_resource path="res://areas/area_change_map.tscn" type="PackedScene" id=3]
[ext_resource path="res://tileset/scripts/set_camera_limit.gd" type="Script" id=4]
[ext_resource path="res://maps/chapter5/obj_door.gd" type="Script" id=5]
[ext_resource path="res://tileset/feeling_dungeon.png" type="Texture" id=6]
[ext_resource path="res://tileset/tilemap_grassy_lands_decor.tres" type="TileSet" id=7]
[ext_resource path="res://maps/chapter5/nycto.gd" type="Script" id=8]
[ext_resource path="res://maps/chapter5/chapter5-wrath.gd" type="Script" id=9]
[ext_resource path="res://sprites/spr_darkcat/spr_darkcat4.png" type="Texture" id=10]
[ext_resource path="res://sprites/spr_darkcat/spr_darkcat7.png" type="Texture" id=11]
[ext_resource path="res://sprites/spr_darkcat/spr_darkcat6.png" type="Texture" id=12]
[ext_resource path="res://sprites/spr_darkcat/spr_darkcat2.png" type="Texture" id=13]
[ext_resource path="res://sprites/spr_darkcat/spr_darkcat8.png" type="Texture" id=14]
[ext_resource path="res://sprites/spr_darkcat/spr_darkcat1.png" type="Texture" id=15]
[ext_resource path="res://sprites/spr_darkcat/spr_darkcat5.png" type="Texture" id=16]
[ext_resource path="res://sprites/spr_darkcat/spr_darkcat3.png" type="Texture" id=17]
[ext_resource path="res://entities/boss_attacks/node_boss_attacks.tscn" type="PackedScene" id=18]
[ext_resource path="res://maps/chapter5/aberration_anim.tscn" type="PackedScene" id=19]
[ext_resource path="res://dialogue/dialogue_system.tscn" type="PackedScene" id=20]
[ext_resource path="res://dialogue/dialogue_holder.tscn" type="PackedScene" id=21]
[ext_resource path="res://sprites/spr_mc/spr_darkmc_shadow.png" type="Texture" id=22]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="CircleShape2D" id=2]
radius = 24.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 8 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 14 ) ],
"loop": true,
"name": "attack",
"speed": 12.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 10 ), ExtResource( 16 ) ],
"loop": true,
"name": "tp",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=5]

[node name="chapter5-nycto" type="Node2D"]
script = ExtResource( 9 )

[node name="dialogue_system" parent="." instance=ExtResource( 20 )]
boss = "nycto"

[node name="0" parent="dialogue_system" instance=ExtResource( 21 )]
dialogue_lines = [ [ "Kamu bahkan tidak mengetahui dirimu sendiri" ], [ "You don't even know yourself" ] ]
dialogue_picture_resource = [ ExtResource( 22 ) ]
dialogue_command = "enable_boss"

[node name="aberration_anim" parent="." instance=ExtResource( 19 )]

[node name="tilemap_grassy_lands" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( -1310733, 0, 65537, -1310732, 0, 65537, -1310731, 0, 65537, -1310730, 0, 65537, -1310729, 0, 65537, -1310728, 2, 131073, -1310727, 2, 131073, -1310726, 2, 131073, -1310725, 2, 131073, -1310724, 2, 131073, -1310723, 2, 131073, -1310722, 14, 131074, -1310721, 5, 65536, -1376256, 5, 65538, -1376255, 14, 131072, -1376254, 2, 131073, -1376253, 2, 131073, -1376252, 2, 131073, -1376251, 2, 131073, -1376250, 2, 131073, -1376249, 2, 131073, -1376248, 0, 65537, -1376247, 0, 65537, -1376246, 0, 65537, -1376245, 0, 65537, -1376244, 0, 65537, -1245197, 0, 65537, -1245196, 0, 65537, -1245195, 0, 65537, -1245194, 0, 65537, -1245193, 2, 65538, -1245192, 16, 0, -1245191, 16, 0, -1245190, 16, 0, -1245189, 16, 0, -1245188, 16, 0, -1245187, 16, 0, -1245186, 16, 0, -1245185, 5, 65536, -1310720, 5, 65538, -1310719, 16, 0, -1310718, 16, 0, -1310717, 16, 0, -1310716, 16, 0, -1310715, 16, 0, -1310714, 16, 0, -1310713, 16, 0, -1310712, 2, 65536, -1310711, 0, 65537, -1310710, 0, 65537, -1310709, 0, 65537, -1310708, 0, 65537, -1179661, 0, 65537, -1179660, 0, 65537, -1179659, 0, 65537, -1179658, 0, 65537, -1179657, 2, 65538, -1179649, 5, 65536, -1245184, 5, 65538, -1245176, 2, 65536, -1245175, 0, 65537, -1245174, 0, 65537, -1245173, 0, 65537, -1245172, 0, 65537, -1114125, 0, 65537, -1114124, 0, 65537, -1114123, 0, 65537, -1114122, 0, 65537, -1114121, 2, 65538, -1114120, 0, 0, -1114119, 0, 1, -1114118, 0, 1, -1114117, 0, 1, -1114116, 0, 1, -1114115, 0, 1, -1114114, 0, 1, -1114113, 5, 65536, -1179648, 5, 65538, -1179647, 0, 1, -1179646, 0, 1, -1179645, 0, 1, -1179644, 0, 1, -1179643, 0, 1, -1179642, 0, 1, -1179641, 0, 2, -1179640, 2, 65536, -1179639, 0, 65537, -1179638, 0, 65537, -1179637, 0, 65537, -1179636, 0, 65537, -1048589, 0, 65537, -1048588, 0, 65537, -1048587, 0, 65537, -1048586, 0, 65537, -1048585, 2, 65538, -1048584, 0, 65536, -1048583, 0, 65537, -1048582, 0, 65537, -1048581, 0, 65537, -1048580, 0, 65537, -1048579, 0, 65537, -1048578, 0, 65537, -1048577, 5, 65536, -1114112, 5, 65538, -1114111, 0, 65537, -1114110, 0, 65537, -1114109, 0, 65537, -1114108, 0, 65537, -1114107, 0, 65537, -1114106, 0, 65537, -1114105, 0, 65538, -1114104, 2, 65536, -1114103, 0, 65537, -1114102, 0, 65537, -1114101, 0, 65537, -1114100, 0, 65537, -983053, 0, 65537, -983052, 0, 65537, -983051, 0, 65537, -983050, 0, 65537, -983049, 2, 65538, -983048, 0, 65536, -983047, 0, 65537, -983046, 0, 65537, -983045, 0, 65537, -983044, 0, 65537, -983043, 0, 65537, -983042, 0, 65537, -983041, 5, 65536, -1048576, 5, 65538, -1048575, 0, 65537, -1048574, 0, 65537, -1048573, 0, 65537, -1048572, 0, 65537, -1048571, 0, 65537, -1048570, 0, 65537, -1048569, 0, 65538, -1048568, 2, 65536, -1048567, 0, 65537, -1048566, 0, 65537, -1048565, 0, 65537, -1048564, 0, 65537, -917517, 0, 65537, -917516, 0, 65537, -917515, 0, 65537, -917514, 0, 65537, -917513, 2, 65538, -917512, 0, 65536, -917511, 0, 65537, -917510, 0, 65537, -917509, 0, 65537, -917508, 0, 65537, -917507, 0, 65537, -917506, 0, 65537, -917505, 5, 65536, -983040, 5, 65538, -983039, 0, 65537, -983038, 0, 65537, -983037, 0, 65537, -983036, 0, 65537, -983035, 0, 65537, -983034, 0, 65537, -983033, 0, 65538, -983032, 2, 65536, -983031, 0, 65537, -983030, 0, 65537, -983029, 0, 65537, -983028, 0, 65537, -851981, 0, 65537, -851980, 0, 65537, -851979, 0, 65537, -851978, 0, 65537, -851977, 2, 65538, -851976, 0, 65536, -851975, 0, 65537, -851974, 0, 65537, -851973, 0, 65537, -851972, 0, 65537, -851971, 0, 65537, -851970, 0, 65537, -851969, 5, 65536, -917504, 5, 65538, -917503, 0, 65537, -917502, 0, 65537, -917501, 0, 65537, -917500, 0, 65537, -917499, 0, 65537, -917498, 0, 65537, -917497, 0, 65538, -917496, 2, 65536, -917495, 0, 65537, -917494, 0, 65537, -917493, 0, 65537, -917492, 0, 65537, -786445, 0, 65537, -786444, 0, 65537, -786443, 0, 65537, -786442, 0, 65537, -786441, 2, 65538, -786440, 0, 65536, -786439, 0, 65537, -786438, 0, 65537, -786437, 0, 65537, -786436, 0, 65537, -786435, 0, 65537, -786434, 0, 65537, -786433, 5, 65536, -851968, 5, 65538, -851967, 0, 65537, -851966, 0, 65537, -851965, 0, 65537, -851964, 0, 65537, -851963, 0, 65537, -851962, 0, 65537, -851961, 0, 65538, -851960, 2, 65536, -851959, 0, 65537, -851958, 0, 65537, -851957, 0, 65537, -851956, 0, 65537, -720909, 0, 65537, -720908, 0, 65537, -720907, 0, 65537, -720906, 0, 65537, -720905, 2, 65538, -720904, 0, 65536, -720903, 0, 65537, -720902, 0, 65537, -720901, 0, 65537, -720900, 0, 65537, -720899, 0, 65537, -720898, 0, 65537, -720897, 5, 65536, -786432, 5, 65538, -786431, 0, 65537, -786430, 0, 65537, -786429, 0, 65537, -786428, 0, 65537, -786427, 0, 65537, -786426, 0, 65537, -786425, 0, 65538, -786424, 2, 65536, -786423, 0, 65537, -786422, 0, 65537, -786421, 0, 65537, -786420, 0, 65537, -655373, 0, 65537, -655372, 0, 65537, -655371, 0, 65537, -655370, 0, 65537, -655369, 2, 65538, -655368, 0, 65536, -655367, 0, 65537, -655366, 0, 65537, -655365, 0, 65537, -655364, 0, 65537, -655363, 0, 65537, -655362, 0, 65537, -655361, 5, 65536, -720896, 5, 65538, -720895, 0, 65537, -720894, 0, 65537, -720893, 0, 65537, -720892, 0, 65537, -720891, 0, 65537, -720890, 0, 65537, -720889, 0, 65538, -720888, 2, 65536, -720887, 0, 65537, -720886, 0, 65537, -720885, 0, 65537, -720884, 0, 65537, -589837, 0, 65537, -589836, 0, 65537, -589835, 0, 65537, -589834, 0, 65537, -589833, 2, 65538, -589832, 0, 65536, -589831, 0, 65537, -589830, 0, 65537, -589829, 0, 65537, -589828, 0, 65537, -589827, 0, 65537, -589826, 0, 65537, -589825, 5, 65536, -655360, 5, 65538, -655359, 0, 65537, -655358, 0, 65537, -655357, 0, 65537, -655356, 0, 65537, -655355, 0, 65537, -655354, 0, 65537, -655353, 0, 65538, -655352, 2, 65536, -655351, 0, 65537, -655350, 0, 65537, -655349, 0, 65537, -655348, 0, 65537, -524301, 0, 65537, -524300, 0, 65537, -524299, 0, 65537, -524298, 0, 65537, -524297, 2, 65538, -524296, 0, 65536, -524295, 0, 65537, -524294, 0, 65537, -524293, 0, 65537, -524292, 0, 65537, -524291, 0, 65537, -524290, 0, 65537, -524289, 5, 65536, -589824, 5, 65538, -589823, 0, 65537, -589822, 0, 65537, -589821, 0, 65537, -589820, 0, 65537, -589819, 0, 65537, -589818, 0, 65537, -589817, 0, 65538, -589816, 2, 65536, -589815, 0, 65537, -589814, 0, 65537, -589813, 0, 65537, -589812, 0, 65537, -458765, 0, 65537, -458764, 0, 65537, -458763, 0, 65537, -458762, 0, 65537, -458761, 2, 65538, -458760, 0, 65536, -458759, 0, 65537, -458758, 0, 65537, -458757, 0, 65537, -458756, 0, 65537, -458755, 0, 65537, -458754, 0, 65537, -458753, 5, 65536, -524288, 5, 65538, -524287, 0, 65537, -524286, 0, 65537, -524285, 0, 65537, -524284, 0, 65537, -524283, 0, 65537, -524282, 0, 65537, -524281, 0, 65538, -524280, 2, 65536, -524279, 0, 65537, -524278, 0, 65537, -524277, 0, 65537, -524276, 0, 65537, -393229, 0, 65537, -393228, 0, 65537, -393227, 0, 65537, -393226, 0, 65537, -393225, 2, 65538, -393224, 0, 65536, -393223, 0, 65537, -393222, 0, 65537, -393221, 0, 65537, -393220, 0, 65537, -393219, 0, 65537, -393218, 0, 65537, -393217, 5, 65536, -458752, 5, 65538, -458751, 0, 65537, -458750, 0, 65537, -458749, 0, 65537, -458748, 0, 65537, -458747, 0, 65537, -458746, 0, 65537, -458745, 0, 65538, -458744, 2, 65536, -458743, 0, 65537, -458742, 0, 65537, -458741, 0, 65537, -458740, 0, 65537, -327693, 0, 65537, -327692, 0, 65537, -327691, 0, 65537, -327690, 0, 65537, -327689, 2, 65538, -327688, 0, 65536, -327687, 0, 65537, -327686, 0, 65537, -327685, 0, 65537, -327684, 0, 65537, -327683, 0, 65537, -327682, 0, 65537, -327681, 5, 65536, -393216, 5, 65538, -393215, 0, 65537, -393214, 0, 65537, -393213, 0, 65537, -393212, 0, 65537, -393211, 0, 65537, -393210, 0, 65537, -393209, 0, 65538, -393208, 2, 65536, -393207, 0, 65537, -393206, 0, 65537, -393205, 0, 65537, -393204, 0, 65537, -262157, 0, 65537, -262156, 0, 65537, -262155, 0, 65537, -262154, 0, 65537, -262153, 2, 65538, -262152, 0, 65536, -262151, 0, 65537, -262150, 0, 65537, -262149, 0, 65537, -262148, 0, 65537, -262147, 0, 65537, -262146, 0, 65537, -262145, 5, 65536, -327680, 5, 65538, -327679, 0, 65537, -327678, 0, 65537, -327677, 0, 65537, -327676, 0, 65537, -327675, 0, 65537, -327674, 0, 65537, -327673, 0, 65538, -327672, 2, 65536, -327671, 0, 65537, -327670, 0, 65537, -327669, 0, 65537, -327668, 0, 65537, -196621, 0, 65537, -196620, 0, 65537, -196619, 0, 65537, -196618, 0, 65537, -196617, 2, 65538, -196616, 0, 65536, -196615, 0, 65537, -196614, 0, 65537, -196613, 0, 65537, -196612, 0, 65537, -196611, 0, 65537, -196610, 0, 65537, -196609, 5, 65536, -262144, 5, 65538, -262143, 0, 65537, -262142, 0, 65537, -262141, 0, 65537, -262140, 0, 65537, -262139, 0, 65537, -262138, 0, 65537, -262137, 0, 65538, -262136, 2, 65536, -262135, 0, 65537, -262134, 0, 65537, -262133, 0, 65537, -262132, 0, 65537, -131085, 0, 65537, -131084, 0, 65537, -131083, 0, 65537, -131082, 0, 65537, -131081, 2, 65538, -131080, 0, 65536, -131079, 0, 65537, -131078, 0, 65537, -131077, 0, 65537, -131076, 0, 65537, -131075, 0, 65537, -131074, 0, 65537, -131073, 5, 65536, -196608, 5, 65538, -196607, 0, 65537, -196606, 0, 65537, -196605, 0, 65537, -196604, 0, 65537, -196603, 0, 65537, -196602, 0, 65537, -196601, 0, 65538, -196600, 2, 65536, -196599, 0, 65537, -196598, 0, 65537, -196597, 0, 65537, -196596, 0, 65537, -65549, 0, 65537, -65548, 0, 65537, -65547, 0, 65537, -65546, 0, 65537, -65545, 2, 65538, -65544, 0, 65536, -65543, 0, 65537, -65542, 0, 65537, -65541, 0, 65537, -65540, 0, 65537, -65539, 0, 65537, -65538, 0, 65537, -65537, 5, 65536, -131072, 5, 65538, -131071, 0, 65537, -131070, 0, 65537, -131069, 0, 65537, -131068, 0, 65537, -131067, 0, 65537, -131066, 0, 65537, -131065, 0, 65538, -131064, 2, 65536, -131063, 0, 65537, -131062, 0, 65537, -131061, 0, 65537, -131060, 0, 65537, -13, 0, 65537, -12, 0, 65537, -11, 0, 65537, -10, 0, 65537, -9, 2, 65538, -8, 0, 65536, -7, 0, 65537, -6, 0, 65537, -5, 0, 65537, -4, 0, 65537, -3, 0, 65537, -2, 0, 65537, -1, 5, 65536, -65536, 5, 65538, -65535, 0, 65537, -65534, 0, 65537, -65533, 0, 65537, -65532, 0, 65537, -65531, 0, 65537, -65530, 0, 65537, -65529, 0, 65538, -65528, 2, 65536, -65527, 0, 65537, -65526, 0, 65537, -65525, 0, 65537, -65524, 0, 65537, 65523, 0, 65537, 65524, 0, 65537, 65525, 0, 65537, 65526, 0, 65537, 65527, 2, 65538, 65528, 0, 65536, 65529, 0, 65537, 65530, 0, 65537, 65531, 0, 65537, 65532, 0, 65537, 65533, 0, 65537, 65534, 0, 65537, 65535, 5, 65536, 0, 5, 65538, 1, 0, 65537, 2, 0, 65537, 3, 0, 65537, 4, 0, 65537, 5, 0, 65537, 6, 0, 65537, 7, 0, 65538, 8, 2, 65536, 9, 0, 65537, 10, 0, 65537, 11, 0, 65537, 12, 0, 65537, 131059, 0, 65537, 131060, 0, 65537, 131061, 0, 65537, 131062, 0, 65537, 131063, 2, 65538, 131064, 0, 65536, 131065, 0, 65537, 131066, 0, 65537, 131067, 0, 65537, 131068, 0, 65537, 131069, 0, 65537, 131070, 0, 65537, 131071, 5, 65536, 65536, 5, 65538, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 65537, 65543, 0, 65538, 65544, 2, 65536, 65545, 0, 65537, 65546, 0, 65537, 65547, 0, 65537, 65548, 0, 65537, 196595, 0, 65537, 196596, 0, 65537, 196597, 0, 65537, 196598, 0, 65537, 196599, 2, 65538, 196600, 0, 131072, 196601, 0, 131073, 196602, 0, 131073, 196603, 0, 131073, 196604, 0, 131073, 196605, 0, 131073, 196606, 0, 131073, 196607, 5, 65536, 131072, 5, 65538, 131073, 0, 131073, 131074, 0, 131073, 131075, 0, 131073, 131076, 0, 131073, 131077, 0, 131073, 131078, 0, 131073, 131079, 0, 131074, 131080, 2, 65536, 131081, 0, 65537, 131082, 0, 65537, 131083, 0, 65537, 131084, 0, 65537, 262131, 0, 65537, 262132, 0, 65537, 262133, 0, 65537, 262134, 0, 65537, 262135, 0, 65537, 262136, 2, 1, 262137, 2, 1, 262138, 2, 1, 262139, 2, 1, 262140, 2, 1, 262141, 2, 1, 262142, 2, 1, 262143, 2, 1, 196608, 2, 1, 196609, 2, 1, 196610, 2, 1, 196611, 2, 1, 196612, 2, 1, 196613, 2, 1, 196614, 2, 1, 196615, 2, 1, 196616, 0, 65537, 196617, 0, 65537, 196618, 0, 65537, 196619, 0, 65537, 196620, 0, 65537, 327667, 0, 65537, 327668, 0, 65537, 327669, 0, 65537, 327670, 0, 65537, 327671, 0, 65537, 327672, 0, 65537, 327673, 0, 65537, 327674, 0, 65537, 327675, 0, 65537, 327676, 0, 65537, 327677, 0, 65537, 327678, 0, 65537, 327679, 0, 65537, 262144, 0, 65537, 262145, 0, 65537, 262146, 0, 65537, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 262156, 0, 65537, 393203, 0, 65537, 393204, 0, 65537, 393205, 0, 65537, 393206, 0, 65537, 393207, 0, 65537, 393208, 0, 65537, 393209, 0, 65537, 393210, 0, 65537, 393211, 0, 65537, 393212, 0, 65537, 393213, 0, 65537, 393214, 0, 65537, 393215, 0, 65537, 327680, 0, 65537, 327681, 0, 65537, 327682, 0, 65537, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 65537, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 65537, 458739, 0, 65537, 458740, 0, 65537, 458741, 0, 65537, 458742, 0, 65537, 458743, 0, 65537, 458744, 0, 65537, 458745, 0, 65537, 458746, 0, 65537, 458747, 0, 65537, 458748, 0, 65537, 458749, 0, 65537, 458750, 0, 65537, 458751, 0, 65537, 393216, 0, 65537, 393217, 0, 65537, 393218, 0, 65537, 393219, 0, 65537, 393220, 0, 65537, 393221, 0, 65537, 393222, 0, 65537, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 65537, 393228, 0, 65537, 524275, 0, 65537, 524276, 0, 65537, 524277, 0, 65537, 524278, 0, 65537, 524279, 0, 65537, 524280, 0, 65537, 524281, 0, 65537, 524282, 0, 65537, 524283, 0, 65537, 524284, 0, 65537, 524285, 0, 65537, 524286, 0, 65537, 524287, 0, 65537, 458752, 0, 65537, 458753, 0, 65537, 458754, 0, 65537, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65537, 458758, 0, 65537, 458759, 0, 65537, 458760, 0, 65537, 458761, 0, 65537, 458762, 0, 65537, 458763, 0, 65537, 458764, 0, 65537 )
script = ExtResource( 4 )

[node name="tilemap_grassy_lands_decor" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
collision_layer = 8
collision_mask = 0
format = 1

[node name="obj_door" type="StaticBody2D" parent="."]
position = Vector2( 0, -320 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="spr_dungeon_door" type="Sprite" parent="obj_door"]
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 64, 64, 32, 32 )

[node name="col_door" type="CollisionShape2D" parent="obj_door"]
shape = SubResource( 1 )

[node name="area_door" type="Area2D" parent="obj_door"]
collision_layer = 0

[node name="col_area_door" type="CollisionShape2D" parent="obj_door/area_door"]
shape = SubResource( 2 )

[node name="entity_mc" parent="." instance=ExtResource( 2 )]

[node name="area_change_map" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -344 )
destination = "res://maps/chapter5/chapter5-depression.tscn"

[node name="col_area" type="CollisionShape2D" parent="area_change_map"]
shape = SubResource( 3 )

[node name="node_spawn" type="Node2D" parent="."]

[node name="0" type="Position2D" parent="node_spawn"]
position = Vector2( -96, -256 )

[node name="1" type="Position2D" parent="node_spawn"]
position = Vector2( 0, -256 )

[node name="3" type="Position2D" parent="node_spawn"]
position = Vector2( -96, -128 )

[node name="4" type="Position2D" parent="node_spawn"]
position = Vector2( 96, -128 )

[node name="5" type="Position2D" parent="node_spawn"]
position = Vector2( 96, 0 )

[node name="6" type="Position2D" parent="node_spawn"]
position = Vector2( -96, 0 )

[node name="2" type="Position2D" parent="node_spawn"]
position = Vector2( 96, -256 )

[node name="nycto" type="KinematicBody2D" parent="."]
position = Vector2( 0, -256 )
collision_layer = 2
collision_mask = 8
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="node_boss_attacks" parent="nycto" instance=ExtResource( 18 )]

[node name="aspr_darkcat" type="AnimatedSprite" parent="nycto"]
frames = SubResource( 4 )
animation = "attack"

[node name="col_darkcat" type="CollisionShape2D" parent="nycto"]
shape = SubResource( 5 )

[node name="node_timer" type="Node" parent="nycto"]

[node name="timer_stage_three" type="Timer" parent="nycto/node_timer"]
wait_time = 3.0
one_shot = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.266667, 0.286275, 0.321569, 1 )
[connection signal="body_entered" from="obj_door/area_door" to="obj_door" method="_on_area_door_body_entered"]
